Changes since 1.2
=================
Bugfixes:
- Fix rendering bugs of cell borders (when scrolled up)
- Fix crash on printout when printrange was one row or one column only
- Small fix: "14: 4 am" is now "14:04 am"
- Fix scroll to end of sheet when zoomed
- Fix repainting cells too many times
- Fix print header/footer makros
- Fix print header/footer makro "<sheet>" (was internally switched to "<table>")
- Fix repaint loops, when at end of range and zooming to lower resolution
- Fix endless loop, when selecting until out of range
- Fix autoscroll on selection with mouse, when mouse is not moved
- Fix printout of thick borders on page borders
- Fix flicker of embedded objects


Changes from 1.1 to 1.2
=======================

Since RC1:
----------
Bugfixes:
- Fix display and printout with special files (offset by 1 pixel).
- Fix printout of thick cell borders on page borders
- Fix printout of children, when they overlap one page
- Fix #45967, #31130
- Fix #45944 (Normal): Paste special->text overwrite borders
- Fix #42456 (Normal): merged cells with centered text do not survive insert/delete rows
- Fix #45943 (Crash): crash after "money format"
- Fix function documentation (YEAR(), FACTDOUBLE() )
- Fix parsing and error checking for spreadsheet names.
- Fix #46045 (Normal): serious errors in forumulas
- Fix Embedded chart changes titles when opening again
- Fix #44628 (Grave): 1.1 document not read with 1.2 - circular references
- Fix #40150 (Normal): Precision problem in calculations
- Fix #29524:  KSpread Formula editors tooltip should be changed
- Fix #18083: KSpread rounding error
- Fix #46530: crash on selecting validity
- Fix #45395: Save as HTML is called "mime type"
- Fix #34088: Precision of currency is too low or overflow is handled in a strange way
- Fix #45324: consolidate function result reference area selecting unintuitive

Until RC1:
----------
New:
- Like all of KOffice: a readonly GUI for embedding into Konqueror
- More DCOP calls

Bugfixes: