@@ -3458,7 +3458,6 @@ void KSpreadHBorder::mousePressEvent( QMouseEvent * _ev )
   if ( table->columnLayout(tmpCol  )->isHide() && tmpCol == 1)
       m_bResize = false;
 
-  QRect rect = m_pView->selection();
   if ( m_bResize )
   {
     // Determine the column to resize
@@ -3466,30 +3465,26 @@ void KSpreadHBorder::mousePressEvent( QMouseEvent * _ev )
     m_iResizedColumn = table->leftColumn( _ev->pos().x() - /*3*/1, tmp, m_pCanvas );
     paintSizeIndicator( _ev->pos().x(), true );
   }
-  else if ( ( rect.left() != rect.right() )
-            && ( tmpCol >= rect.left() )
-            && ( tmpCol <= rect.right() )
-      && _ev->button() == RightButton )
-  {
-      QPoint p = mapToGlobal( _ev->pos() );
-      m_pView->popupColumnMenu( p );
-  }
   else
   {
     m_bSelection = TRUE;
+
     double tmp;
     int hit_col = table->leftColumn( _ev->pos().x(), tmp, m_pCanvas );
-    if( hit_col > KS_colMax)
+    if(hit_col > KS_colMax)
 	return;
+
     m_iSelectionAnchor = hit_col;
 
-    if(!rect.contains( QPoint(hit_col,1)) || !(_ev->button() == RightButton)
-                                          || !(util_isRowSelected(m_pView->selection())) )
+    QRect rect = m_pView->selection();
+    if( !rect.contains( QPoint(hit_col, 1) ) ||
+        !(_ev->button() == RightButton) ||
+        (!util_isColumnSelected(rect)) )
     {
-      QPoint newMarker(hit_col, 1);
-      QPoint newAnchor(hit_col, KS_rowMax);
-      m_pView->selectionInfo()->setSelection( newMarker, newAnchor,
-                                              m_pView->activeTable() );
+        QPoint newMarker(hit_col, 1);
+        QPoint newAnchor(hit_col, KS_rowMax);
+        m_pView->selectionInfo()->setSelection( newMarker, newAnchor,
+                                                m_pView->activeTable() );
     }
     if ( _ev->button() == RightButton )
     {
